--- a/src/components/SoundIcon/SoundStyles.scss
+++ b/src/components/SoundIcon/SoundStyles.scss
@@ -5,7 +5,7 @@
 
     img {
       color: white;
-      margin: 2% 0 0 58%;
+      margin: -80px 0 0 360px;
       width: 30px;
       position: absolute;
     }
