--- a/src/screens/SecondScreen/BoardGame.scss
+++ b/src/screens/SecondScreen/BoardGame.scss
@@ -6,10 +6,7 @@
   justify-content: center;
   align-items: center;
   .white-area {
-    width: 470px;
-    height: 400px;
-    padding-top: 80px;
-    padding-right: 30px;
+    padding: 80px 15px 15px 15px;
     display: flex;
     justify-content: center;
     background-color: white;
@@ -32,8 +29,8 @@
     }
     .game__area {
       display: grid;
-      grid-template-columns: repeat(4, 5rem);
-      grid-template-rows: repeat(2, 8rem);
+      grid-template-columns: repeat(8, 5rem);
+      grid-template-rows: repeat(3, 8rem);
       gap: 5px;
       .card {
         perspective: 15rem;
@@ -43,6 +40,7 @@
         border: transparent;
         img {
           width: 60px;
+          filter: invert(90%);
         }
         .card__side {
           background-color: rgb(42, 79, 201);
